INTYGFV-16687: Fixed validation and added text limit